--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "**Elementos necesarios:**\r   *Descargar e Instalar:\r   *Visual Studio Code\r   *Git\r   *Node.js (16.15)",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,5 +14,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "sequelize": "^6.19.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
