--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.16"
   }
 }
