--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "sequelize": "^6.19.0"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "mocha": "^10.0.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "sequelize": "^6.19.0",
+    "sequelize-cli": "^6.4.1"
   }
 }
