--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha": "^10.0.0",
     "nodemon": "^2.0.16",
     "sequelize": "^6.19.0",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "@ngneat/falso": "5.3.0"
   }
 }
