--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@
 PUERTO = 3000
 
 #MySQL
-DB_HOST = 
-DB_NAME = 
-DB_USER = 
-DB_PSWD = 
-DB_DIALECT = (motor de BD)
+DB_HOST= 
+DB_NAME= 
+DB_USER= 
+DB_PSWD= 
+DB_DIALECT=
