--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
+    "@ngneat/falso": "^5.3.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.16",
-    "sequelize": "^6.19.0",
-    "sequelize-cli": "^6.4.1",
-    "@ngneat/falso": "5.3.0"
+    "sequelize": "^6.19.2",
+    "sequelize-cli": "^6.4.1"
   }
 }
